--- a/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Eclipse-Mqtt/mqtt-deployment.yaml
+++ b/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Eclipse-Mqtt/mqtt-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: mqtt
   name: mqtt
-  namespace: kostas-tandem
+  namespace: pi-edge
 spec:
   replicas: 1
   selector:
