--- a/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Grafana/grafana-deployment.yaml
+++ b/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Grafana/grafana-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: grafana
   name: grafana
-  namespace: kostas-tandem
+  namespace: pi-edge
 spec:
   selector:
     matchLabels:
