--- a/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Grafana/grafana-service.yaml
+++ b/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Grafana/grafana-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
-  namespace: kostas-tandem
+  namespace: pi-edge
 spec:
   ports:
     - port: 3000
