--- a/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Grafana/grafana-volume.yaml
+++ b/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Grafana/grafana-volume.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
-  namespace: kostas-tandem
+  namespace: pi-edge
 spec:
   accessModes:
     - ReadWriteOnce
