--- a/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/InfluxDB/influxdb-data.yaml
+++ b/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/InfluxDB/influxdb-data.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim  
 metadata:  
   name: influxdb-data  
-  namespace: kostas-tandem
+  namespace: pi-edge
 spec:  
   accessModes:  
   - ReadWriteOnce  
