--- a/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/InfluxDB/influxdb-service.yaml
+++ b/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/InfluxDB/influxdb-service.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: influxdb
   name: influxdb
-  namespace: kostas-tandem
+  namespace: pi-edge
 spec:
   ports:
     - name: "8086"
