--- a/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Temperature & Humidity App/messenger-depoyment.yaml
+++ b/TANDEM Edge/TANDEM Support Services/IoT Data Analytics/Temperature & Humidity App/messenger-depoyment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: messenger
   name: messenger
-  namespace: kostas-tandem
+  namespace: pi-edge
 spec:
   replicas: 1
   selector:
