--- a/TANDEM System Manager/Service Catalogue/src/main/resources/application.properties
+++ b/TANDEM System Manager/Service Catalogue/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 server.port=8082
 
 #-------mongoDB-------
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 #spring.data.mongodb.database=java-to-dev-api
 
