--- a/TANDEM System Manager/Service Catalogue/pom.xml
+++ b/TANDEM System Manager/Service Catalogue/pom.xml
@@ -103,6 +103,21 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	End Security-->
+        
+        
+         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.1</version>
+        </dependency>     
+
+
+
 	</dependencies>
 
 <!--	<dependencyManagement>
